--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,19 @@ html {
 }
 
 body {
-    background-image: url(/Weather.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-image: url('/Weather.jpg');
+    background-size: cover;   
 }
+
+
 
 .container {
     display: flex;
@@ -18,12 +29,11 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 1.5em;
-    margin: auto;
-    margin-top: 20px;
-    width: 600px;
-    aspect-ratio: 1;
+    /* width: 600px; */
+    /* aspect-ratio: 1; */
     padding: 16px;
-    background-color: #d3d3d383;
+    background-color: #d3d3d3a6;
+    box-shadow: 2px 10px 10px #1a1a1a;
     border-radius: 16px;
 }
 
@@ -82,11 +92,10 @@ span {
     border-radius: 5px;
     font-size: large;
     background-color: white; 
-    box-shadow: 1px 10px 10px rgb(95, 95, 95);
+    box-shadow: 2px 10px 10px #1a1a1a;
 }
 
 .weather__btn:hover {
     background-color: #cfcfcf;
     box-shadow: 2px 10px 10px #1a1a1a;
 }
-
